Switched to WKWebView which stopped the popover from scrolling the background. Fixed keyboard from overlapping the text-input in the more tab. Added a close button to party and bar popovers.

--- a/src/pages/find/partyPopover.scss
+++ b/src/pages/find/partyPopover.scss
@@ -1,6 +1,21 @@
 
 page-partyPopover {
+
+    .container {
+        position: relative;
+    }
+    
     ion-scroll { white-space: nowrap; }
+
+    #closeButton {
+        z-index: 10000;
+        position: absolute;
+        margin-top: 0px;
+        margin-left: 0px;
+        top: 0px;
+        left: 20px;
+        font-size: 4em;
+    }
 
     .home {
         
