--- a/src/pages/more/more.scss
+++ b/src/pages/more/more.scss
@@ -1,5 +1,60 @@
 page-more {
 
+    .home {
+        display: flex;
+        flex-direction: column;
+    
+        ion-grid {
+            padding: 0;
+            height: 100%;
+        }
+
+        
+        ion-col {
+            position: initial;
+        }
+        
+
+        .text-input {
+            height: 100px;
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+        }
+
+        .oneElement {
+            text-align: center;
+            margin-left:auto;
+            margin-right:auto;
+        }
+
+        .twoElements {
+            text-align: center;
+            margin-left:auto;
+            margin-right:auto;
+        }
+    
+        .centerMe {
+            text-align: center;
+        }
+
+        .backgroundIncluded {
+            border-radius: 5px;
+            background-color: $background-info-color;
+        }
+
+        .needsPadding {
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 2px;
+            padding-bottom: 2px;
+        }
+
+        .needsSpaceOnTop {
+            margin-top: 10px;
+        }
+    }
+
     .overlayMoreTab {
         position: fixed; /* Sit on top of the page content */
         width: 100vw; /* Full width (cover the whole page) */
@@ -63,55 +118,6 @@ page-more {
             font-weight: bold;
             width: 100%;
             height: 100%;
-        }
-    }
-
-    .home {
-        display: flex;
-        flex-direction: column;
-    
-        ion-grid {
-            padding: 0;
-            height: 100%;
-        }
-
-        .text-input {
-            height: 20vh;
-            margin: 0px;
-            padding: 0px;
-            width: 100%;
-        }
-
-        .oneElement {
-            text-align: center;
-            margin-left:auto;
-            margin-right:auto;
-        }
-
-        .twoElements {
-            text-align: center;
-            margin-left:auto;
-            margin-right:auto;
-        }
-    
-        .centerMe {
-            text-align: center;
-        }
-
-        .backgroundIncluded {
-            border-radius: 5px;
-            background-color: $background-info-color;
-        }
-
-        .needsPadding {
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-top: 2px;
-            padding-bottom: 2px;
-        }
-
-        .needsSpaceOnTop {
-            margin-top: 10px;
         }
     }
 }
